# loongclaude

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  swarm_docs.md
.claude/: session_config.json
.claude/agents/: architect.md  coder.md  debugger.md  dependency-upgrader.md  docs-writer.md  git-worktree-manager.md  incident-triage.md  performance-optimizer.md  product.md  refactorer.md  release-manager.md  reviewer.md  router.md  security-reviewer.md  simplifier.md  sql-optimizer.md  tester.md
.claude/docs/: INDEX.md  claud_platform_menu.md
.claude/docs/claude_code/: AGENT_TEAMS.md  BEST_PRACTICES.md  COMMAND_REFERENCE.md  CONFIGURATION.md  EXTENSIONS.md  GETTING_STARTED.md  OVERVIEW.md  SUBAGENTS.md
.claude/guidelines/: README.md
.claude/skills/bugfix/: SKILL.md
.claude/skills/debug/: SKILL.md
.claude/skills/design/: SKILL.md
.claude/skills/docs/: SKILL.md
.claude/skills/feature/: SKILL.md
.claude/skills/perf/: SKILL.md
.claude/skills/refactor/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/security/: SKILL.md
.claude/skills/simplify/: SKILL.md
.claude/skills/sql-optimize/: SKILL.md
.claude/skills/swarm/: SKILL.md
.claude/skills/tdd/: SKILL.md
.claude/skills/triage/: SKILL.md
.claude/skills/workflow-index/: SKILL.md
src/chung_agent_swarm/: __init__.py  cli.py  config.py  handoff.py  json_extract.py  logging.py  orchestrator.py  project.py  protocol.py  session_config.py
tests/: test_handoff.py  test_project.py  test_protocol.py  test_router.py  test_session_config.py
(+6 files in other folders)
