[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chung-agent-swarm"
version = "0.1.0"
description = "A minimal multi-agent swarm skeleton built around Router-Worker orchestration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "chung-agent-swarm" }]
dependencies = []

[project.optional-dependencies]
agent_sdk = ["claude-agent-sdk"]
dev = ["pytest>=8"]

[project.scripts]
chung-swarm = "chung_agent_swarm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
